@@ -1,11 +1,0 @@
-## SECTION=host_gtk
-
-config HOST_GLIBMM
-	tristate
-	select HOST_GLIB
-	select HOST_LIBSIGCPP
-#	select HOST_GCCLIBS_CXX
-	prompt "glibmm"
-	help
-	  glibmm is the C++ interface to the glib library.
-
