@@ -1,3 +1,7 @@
+2011-12-04	Stephan Linz <linz@li-pro.net>
+
+	* common: remove rules for glibmm-2.22.1 (from ptxdist-2010.08.0)
+
 2011-11-18	Stephan Linz <linz@li-pro.net>
 
 	* common: upgarde patch sets to u-boot-2011.03
